--- a/letters.html
+++ b/letters.html
@@ -348,3 +348,6 @@ emojis and the history of emojis, expressing feelings without words and originat
     | | |
     |_!_|
      ╝ ╝
+
+
+when you walk to school, a girl waves at you. what do you do? oh... they were waving to someone behind you.
