--- a/mirror.html
+++ b/mirror.html
@@ -7,22 +7,6 @@
   <link rel="stylesheet" type="text/css" href="thesis.css">
 </head>
 <body>
-  <pre id="ascii-door">
-    __________
-   |          |
-   |          |
-   |          |
-   |          |
-   |          |
-   |          |
-   |        0 |
-   |          |
-   |          |
-   |          |
-   |          |
-   |          |
- __|__________|
-</pre>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -30,23 +14,34 @@
 ║ Monday │ 6:20 AM ║
 ╚══════════════════╝
       </pre>
-      <pre class="asciiAlign"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      _      ()              ()      _
-     / \     ||______________||     / \
-    /___\    |                |    /___\
-      |      |                |      |
-     (_)     |_______  _______|     (_)
-  ___/_\___  {___O___}{_______}  ___/_\___
-   |__~__|   %%%%%%%%%%%%%%%%%%   |__~__|
-___|_____|__%%%%%%%%%%%%%%%%%%%%__|_____|___
-   |     | %%%%%%%%%%%%%%%%%%%%%% |     |
-          %%%%%%%%%%%%%%%%%%%%%%%%
-         %%%%%%%%%%%%%%%%%%%%%%%%%%
-        %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-       /||||||||||||||||||||||||||||\
-       ||||||||||||||||||||||||||||||
-       ||||||||||||||||||||||||||||||
-      </pre>
+      <pre id="ascii-door">
+         ,/─────────────────`\
+       ,/                     `\
+     ,/                         `\
+    │|                           |│
+    │|                           |│
+    │|                           |│
+    │|                           |│
+    │|                           |│
+    │|                           |│
+    │|                           |│
+    │|                           |│
+    │|                           |│
+    │|                           |│
+    │|                           |│
+  (=│|                           |│=)
+  │ │|                           |│ │
+  │ │|                           |│ │
+  │ │|                           |│ │
+  │ │|                           |│ │
+  │ │|                           |│ │
+  │ │|                           |│ │
+  ││ `\                         ,/ ││
+  ││   `\                     ,/   ││
+  ││     `\─────────────────,/     ││
+  ││                               ││
+ /││\                             /││\
+/____\                           /____\</pre>
       <div id="dialogue-box" class="dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
@@ -97,23 +92,6 @@ It's 7am. I don't have time to eat breakfast anymore...
       </div>
     </div>
   </div>
-  <pre>
-
-o(=(=(=(=)=)=)=)o
- !!!!!!}!{!!!!!!
- !!!!!} | {!!!!!
- !!!!}  |  {!!!!
- !!!!}  |  {!!!!
- !!!'   |   '!!!
- ~@~----+----~@~
- !!!    |    !!!
- !!!    |    !!!
- !!!    |    !!!
- !!!    |    !!!
- !!!____|____!!!
- !!!=========!!!
-_!!!_________!!!__
-  </pre>
   <!-- <div id="container">
     <div id="dialogue-box" class="dialogue-box" style="display: none;">
       <pre class="asciiAlign">╭─────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────┒
