--- a/kitchen.html
+++ b/kitchen.html
@@ -14,26 +14,26 @@
 ║ Monday │ 7:25 AM ║
 ╚══════════════════╝
       </pre>
-      <pre id="kitchen"><br><br>
-____________________________________________________
-____________________________________________________
-|.-------.-------.|_.----._.----._|.-------.-------.
-|]       |       [|               |]       |       [
-||       |       ||_______________||       |       |
-||       |       ||┌───────────┐  ||       |       |
-||     (O|O)     ||│           │::||     (O|O)     |
-||       |       ||│           │::||       |       |
-||       |       ||└───────────┘::||       |       |
-|]       |       [|---------------|]       |       [
-||_______|_______||               ||_______|_______|
-'-----------------'               '----------------'
+      <pre class="pointer" id="kitchen">
+     ____________________________________________________
+     ____________________________________________________
+     |.-------.-------.|_.----._.----._|.-------.-------.
+     |]       |       [|               |]       |       [
+     ||       |       ||_______________||       |       |
+     ||       |       ||┌───────────┐  ||       |       |
+     ||     (O|O)     ||│           │::||     (O|O)     |
+     ||       |       ||│           │::||       |       |
+     ||       |       ||└───────────┘::||       |       |
+     |]       |       [|---------------|]       |       [
+     ||_______|_______||               ||_______|_______|
+     '-----------------'               '----------------'
 
-______________________________________
---------------------------------------
-
-
- ___________________________________________________________
-|                 |                        |.-------------.|
+     __________________┌───────────────┐________________
+    -------------------|_______________|-----------------
+                     ,'                '.
+                   ,'                    '.
+ _________________.------------------------._______________
+|                 |  [<>]    [<>]    [<>]  |.-------------.|
 |.---------------.|________________________||  =========  ||
 ||  ===========  ||                        |'-------------'|
 |'---------------'| [=]================[=] |.------.------.|
@@ -43,22 +43,52 @@ ______________________________________
 |.---------------.|    |              |    ||      |      ||
 ||  ===========  ||    |______________|    |]      |      [|
 |'---------------'|________________________||______|______||
-|_________________|                        |_______________|
-'-----------------------------------------------------------''
-   ____                 _______
-           _________                  ______
-  __
-                                _________
-      ___________        __
-    __                              _________
-               ___________
+|_________________|________________________|_______________|
+'-----------------'                        '---------------'
+        ____                 _______
+                _________                  ______
+       __
+                                     _________
+           ___________        __
       </pre>
+      <div id="dialogue-box" class="pointer dialogue-box" style="display: none;">
+        <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
+
+Hmmm... I don't feel like cooking breakfast today.
+
+
+>
+                               </pre>
+      </div>
+      <div id="dialogue-box2" class="pointer dialogue-box" style="display: none;">
+        <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
+
+I'll just make some simple cereal for breakfast.
+
+
+>
+                               </pre>
+      </div>
     </div>
   </div>
   <script>
-    function goToExperience() {
-      window.location.href = 'experience.html';
-    }
+    document.getElementById('kitchen').addEventListener('click', function() {
+      document.getElementById('dialogue-box').style.display = 'block';
+      document.getElementById('kitchen').classList.remove('pointer');
+    });
+
+    document.getElementById('dialogue-box').addEventListener('click', function() {
+      document.getElementById('dialogue-box').style.display = 'none';
+      document.getElementById('dialogue-box2').style.display = 'block';
+    });
+
+    document.getElementById('dialogue-box2').addEventListener('click', function() {
+      window.location.href = 'dining.html';
+    });
   </script>
 </body>
 </html>
+
+<!-- When user clicks on kitchen, dialogue-box appears.
+When user clicks on dialogue-box, dialogue-box2 replaces it.
+When user clicks on dialogue-box2, the user is directed to dining.html -->
